# ato

./: .dockerignore  .gitignore  .gitleaks.toml  .gitleaksignore  .gitmodules  .h  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  README_JA.md  REFACTOR_LAYER_PROPOSAL.md  RELEASE.md  TODO.md  build.rs  capsule.toml  deny.toml  dist-workspace.toml  release-notes-v0.5.0-draft.md  release-plz.toml  show-hn-draft.md  zenn-article-draft.md
core/: CHANGELOG.md  Cargo.toml
core/.ato/share/: guide.md  share.lock.json  share.spec.json
core/schema/: config-schema.json
core/src/: bootstrap.rs  config.rs  engine.rs  error.rs  handle.rs  handle_store.rs  hardware.rs  input_resolver.rs  isolation.rs  launch_spec.rs  lib.rs  lock_runtime.rs  lockfile.rs  lockfile_runtime.rs  lockfile_support.rs  lockfile_tests.rs  mag_uri.rs  manifest.rs  orchestration.rs  python_runtime.rs  r3_config.rs  reporter.rs  router.rs  runtime_config.rs  schema_registry.rs  smoke.rs  trust_store.rs
core/src/adapters/: mod.rs
core/src/adapters/tsnet/: tsnet.v1.rs
core/src/ato_lock/: canonicalize.rs  closure.rs  hash.rs  mod.rs  schema.rs  validate.rs
core/src/capsule/: cas_store.rs  fastcdc_writer.rs  hash.rs  manifest.rs  mod.rs  reconstruct.rs
core/src/capsule_v3/: cas_store.rs  fastcdc_writer.rs  hash.rs  manifest.rs  mod.rs  provider.rs  reconstruct.rs
core/src/common/: mod.rs  paths.rs
core/src/config/: config_impl.rs  schema_registry.rs
core/src/config/diagnostics/: manifest.rs
core/src/config/runtime_config/: builder.rs
core/src/contract/: lockfile.rs  lockfile_runtime.rs  lockfile_support.rs  manifest.rs  mod.rs
core/src/diagnostics/: manifest.rs
core/src/engine/: engine_impl.rs  lifecycle.rs  orchestration.rs  runner.rs
core/src/engine/execution_plan/: error.rs  mod.rs
core/src/engine/executors/: oci.rs  source.rs
core/src/engine/runtime/: oci.rs
core/src/engine/share/: executor.rs
core/src/execution_plan/: canonical.rs  derive.rs  error.rs  guard.rs  model.rs
core/src/executors/: oci.rs  source.rs  wasm.rs
core/src/foundation/: error.rs  metrics.rs  reporter.rs
core/src/foundation/common/: hash.rs  paths.rs  platform.rs
core/src/foundation/types/: bridge.rs  error.rs  identity.rs  manifest.rs  manifest_tests.rs  manifest_v03.rs  manifest_validation.rs  signing.rs
core/src/importer/: mod.rs
core/src/packers/: bundle.rs  capsule.rs  lockfile.rs  pack_filter.rs  payload.rs  sbom.rs  source.rs  web.rs
core/src/packers/runtime_fetcher/: mod.rs
core/src/policy/: egress_resolver.rs
core/src/resource/artifact/: manager.rs  tests.rs
core/src/resource/cas/: bloom.rs  chunker.rs  client.rs  index.rs
core/src/resource/ingest/: fetcher.rs  http.rs
core/src/resource/storage/: manager.rs
core/src/router/: manifest_routing.rs  services.rs
core/src/routing/: discovery.rs  handle.rs  launch_spec.rs  router.rs
core/src/routing/importer/: mod.rs
core/src/routing/router/: lock_routing.rs  manifest_routing.rs  services.rs
core/src/runtime_config/: builder.rs
core/src/schema/: mod.rs
core/src/security/: mod.rs  path.rs
core/src/security/schema/: mod.rs
core/src/security/signing/: sign.rs
core/src/share/: executor.rs  mod.rs  types.rs
core/src/signing/: legacy_signer.rs  mod.rs  sign.rs  verify.rs
core/src/tsnet/: client.rs  integration_test.rs
core/src/types/: bridge.rs  identity.rs  license.rs  manifest.rs  manifest_tests.rs  manifest_v03.rs  manifest_validation.rs  mod.rs  orchestration.rs  profile.rs  runplan.rs  signing.rs
core/src/validation/: mod.rs  source_policy.rs
core/tests/: allocation_regression.rs  mag_uri_test.rs
crates/ato-cli/lock-draft-engine/: Cargo.toml  index.ts
crates/ato-cli/lock-draft-engine/pkg/: lock_draft_engine_bg.d.ts
crates/ato-cli/lock-draft-engine/src/: leip.rs  lib.rs
crates/ato-desktop/: .gitignore  CLAUDE.md  Cargo.toml  SKILL.md  build.rs  desktop-mock.html  launcher-mock.html  mockup.html
crates/ato-desktop/.ato/derived/: capsule.lock.json
crates/ato-desktop/.github/workflows/: desktop-release.yml  state-layer-lint.yml
crates/ato-desktop/assets/: AppIcon.icns
crates/ato-desktop/assets/automation/: agent.js
crates/ato-desktop/assets/i18n/: en.json  ja.json
crates/ato-desktop/assets/launcher/: start.html  switcher.html
crates/ato-desktop/assets/preload/: electron.js  host_bridge.js  wails.js
crates/ato-desktop/assets/terminal/: index.html
crates/ato-desktop/examples/: gpui_html_mockup.rs  nswindow_child_spike.rs
crates/ato-desktop/frontend/: dist  index.html  package.json  pnpm-lock.yaml  vite.config.ts
crates/ato-desktop/frontend/src/: App.tsx  styles.css
crates/ato-desktop/installer/: ato-desktop.appdata.xml  entitlements.plist  wix.wxs
crates/ato-desktop/src/: app.rs  bridge.rs  cli_envelope.rs  cli_install.rs  config.rs  egress_policy.rs  egress_proxy.rs  localization.rs  logging.rs  main.rs  orchestrator.rs  retention.rs  settings.rs  source_import_api.rs  source_import_runner.rs  source_import_session.rs  stable_origin_proxy.rs  surface_timing.rs  terminal.rs  userland.rs  webview.rs
crates/ato-desktop/src/automation/: command.rs  mod.rs  policy.rs  screenshot.rs  transport.rs
crates/ato-desktop/src/state/: app_window.rs  mod.rs  persistence.rs
crates/ato-desktop/src/system_capsule/: broker.rs  ipc.rs  manifest.rs  mod.rs
crates/ato-desktop/src/ui/: mod.rs  theme.rs
crates/ato-desktop/src/window/: app_capsule_shell.rs  auth_login_window.rs  capsule_panel.rs  card_switcher.rs  content_windows.rs  control_bar.rs  dev_console.rs  dock.rs  focus_dispatcher.rs  gestures.rs  identity_window.rs  import_window.rs  launch_window.rs  launcher.rs  macos.rs  (+9 more)
crates/ato-desktop/xtask/: Cargo.toml
crates/ato-session-core/: CHANGELOG.md  Cargo.toml
crates/ato-session-core/src/: healthcheck.rs  lib.rs  process.rs  record.rs  store.rs  sweep.rs  validate.rs
crates/capsule-wire/: CHANGELOG.md  Cargo.toml
crates/capsule-wire/src/: config.rs  error.rs  handle.rs  lib.rs
lock-draft-engine/: CHANGELOG.md  Cargo.toml  index.ts
lock-draft-engine/src/: lib.rs
(+1782 files in other folders)
