[package]
name = "ato-desktop"
version = "0.1.0"
edition = "2021"
authors = ["ato-run"]
description = "The universal user plane for executing and orchestrating sandboxed app capsules."
build = "build.rs"

[features]
gpui-inspector = ["gpui-component/inspector"]

[dependencies]
anyhow = "1.0"
capsule-core = { path = "../ato-cli/core" }
gpui = { git = "https://github.com/zed-industries/zed", rev = "15d86607" }
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "15d86607", features = ["font-kit", "x11", "wayland", "runtime_shaders"] }
gpui-component = { path = ".tmp/vendor/gpui-component-local/crates/ui" }
http = "1.4.0"
portable-pty = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ureq = "2.12.1"
url = "2.5.4"
wry = { version = "0.55.0", features = ["protocol", "devtools"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = "0.3.2"
objc2-foundation = "0.3.2"
objc2-quartz-core = "0.3.2"
