[workspace]
resolver = "2"
members = [
    "crates/ato-cli",
    "crates/capsule-core",
    "crates/capsule-wire",
    "crates/ato-cli/lock-draft-engine",
    "crates/ato-desktop",
    "crates/ato-desktop/xtask",
    "crates/ato-session-core",
    "crates/nacelle",
]

# Vendored path deps that must NOT be inherited as workspace members.
# (Reserved for M3 — when gpui-component vendor checkout lands.)
exclude = [
    "crates/ato-desktop/.tmp",
    "crates/ato-desktop/vendor",
    "sidecars/ato-tsnetd",
]

[workspace.package]
edition = "2021"
repository = "https://github.com/ato-run/ato"
homepage = "https://ato.run"
authors = ["ato-run"]

# Keep crate versions independent during M2 — package versions stay in each
# crate's Cargo.toml. The workspace-wide bump to 0.5.0 happens AFTER CI/CD
# is verified in the new monorepo (per the reordered M2→verify→bump plan).

# The `dist` profile drives cargo-dist's CLI release builds. Mirrors what
# `crates/ato-cli/Cargo.toml` declared as a single-crate workspace before
# the merge. Lifted to the root so cargo-dist sees one canonical profile.
[profile.dist]
inherits = "release"
lto = "thin"
