[package]
name = "ato-desktop"
version = "0.4.110"
edition = "2021"
authors = ["ato-run"]
description = "The universal user plane for executing and orchestrating sandboxed app capsules."
license = "MPL-2.0"
build = "build.rs"

# Opt out of cargo-dist (the CLI release pipeline). Desktop bundles
# are produced by `crates/ato-desktop/xtask` and shipped via
# `.github/workflows/desktop-release.yml`. Without this gate cargo-dist
# scans the [[bin]] targets, demands MSI metadata (WiX upgrade-guid /
# path-guid), and would publish a redundant Windows MSI alongside the
# xtask-built one.
[package.metadata.dist]
dist = false

[[bin]]
name = "ato-desktop"
path = "src/main.rs"

[[bin]]
name = "ato-desktop-mcp"
path = "src/bin/ato_desktop_mcp.rs"

[features]
gpui-inspector = ["gpui-component/inspector"]

[dependencies]
anyhow = "1.0"
ato-session-core = { path = "../ato-session-core" }
base64 = "0.22"
capsule-core = { path = "../capsule-core" }
capsule-wire = { path = "../capsule-wire", version = "0.1.0" }
cookie = "0.18"
dirs = "5.0"
gpui = { git = "https://github.com/zed-industries/zed", rev = "15d86607" }
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "15d86607", features = ["font-kit", "x11", "wayland", "runtime_shaders"] }
gpui-component = { git = "https://github.com/ato-run/gpui-component", rev = "00ea23fbf0d15e229c9ec3034b2c3c16846908f9" }
gpui-component-assets = { git = "https://github.com/ato-run/gpui-component", rev = "00ea23fbf0d15e229c9ec3034b2c3c16846908f9" }
http = "1.4.0"
# ico / image / usvg / resvg / tiny-skia: pre-normalize favicons to PNG
# before handing bytes to GPUI's `Image::from_bytes`. We need this for
# two reasons:
#
# 1. The pinned `gpui` rev's SVG path passes `to_brga = false` to the
#    SVG renderer (gpui platform.rs:2109-2113), leaving the buffer in
#    RGBA-PA when the rest of GPUI expects BGRA — the image renders
#    invisibly on Metal.
# 2. The `image` crate's ICO parser strictly validates ICONDIRENTRY's
#    reserved/planes/bitcount fields and rejects real-world favicons
#    served by Google (gstatic), MDN, and others ("ICO image entry has
#    too many color planes or too large hotspot value"), even though
#    every browser renders them fine. The `ico` crate is purpose-built
#    and lenient, supporting both PNG-encoded and DIB-encoded entries.
ico = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }
include_dir = "0.7"
resvg = "0.45"
tiny-skia = "0.11"
usvg = "0.45"
portable-pty = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
semver = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unicode-width = "0.2"
ureq = "2.12.1"
url = "2.5.4"
wry = { version = "0.55.0", features = ["protocol", "devtools"] }

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6"
objc2 = "0.6.4"
objc2-app-kit = "0.3.2"
objc2-foundation = "0.3.2"
objc2-quartz-core = "0.3.2"
objc2-web-kit = "0.3.2"

[dev-dependencies]
tempfile = "3"
