[package]
name = "lock-draft-engine"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MPL-2.0"

[lib]
name = "lock_draft_engine"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
hex = "0.4"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
toml = "0.8"
# wasm-bindgen is only pulled in when the `wasm` feature is enabled. Range
# (rather than the original `=0.2.100` exact pin) so cargo can unify with
# `gpui_web`, which transitively requires `^0.2.113` from the `ato-desktop`
# crate in the same workspace. The pinned wasm-bindgen-cli version used
# during WASM artifact builds remains controlled outside Cargo.toml.
wasm-bindgen = { version = "0.2", optional = true }

[features]
default = []
wasm = ["dep:wasm-bindgen"]
