[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "demo-provider"
version = "0.1.0"

[project.optional-dependencies]
pdf = ["demo-provider-pdf-helper"]

[project.scripts]
demo-provider = "demo_provider.cli:main"

[tool.setuptools]
packages = ["demo_provider"]