[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "markitdown"
version = "0.1.0"

[project.optional-dependencies]
pdf = ["markitdown-pdf-helper"]

[project.scripts]
markitdown = "markitdown.__main__:main"

[tool.setuptools]
packages = ["markitdown"]